<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNote">


    <Button
        android:id="@+id/add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/t1"
        android:textColor="#fff"
        android:textSize="15sp"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/task_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="#1e1e1e"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/t2"
                    android:inputType="textMultiLine"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="30sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/t3"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_layout"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:text="@string/t9"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/date"
                android:padding="5dp"
                android:text="@string/t7"
                android:textColor="#000"
                android:textSize="18sp" />



            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/t4"
                android:textColor="#000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:layout_toEndOf="@+id/category"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="8dp"
                android:theme="@style/Animation.Design.BottomSheetDialog" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>







